# CDecompose

./: CMakeLists.txt  README.md  clean.sh  run.sh
CDecompositionTex/: ConvexDecomposition.tex
data/: block.wrl  block_decimated.off  block_hacd.wrl  bunny.off  scene.json
depen/HACD_Lib/: CMakeCache.txt
depen/glm/: common.hpp  ext.hpp  glm.hpp  vector_relational.hpp
depen/glm/detail/: func_common.inl  func_exponential.inl  func_geometric.inl  func_integer.inl  setup.hpp  type_float.hpp  type_vec.hpp  type_vec1.hpp
depen/glm/gtc/: bitfield.inl  epsilon.inl  integer.hpp  matrix_access.inl  matrix_transform.hpp  matrix_transform.inl  quaternion.inl  random.inl  round.hpp  type_precision.hpp  type_ptr.hpp  type_ptr.inl  vec1.hpp
depen/glm/gtx/: extended_min_max.hpp  extended_min_max.inl  hash.hpp  hash.inl  io.inl  quaternion.hpp  quaternion.inl  range.hpp  string_cast.inl  type_aligned.hpp
include/: Camera.h  LiteMath.h  OBJ_Loader.h  OFF_Loader.h  box.h  primitives.h  scene.h
shaders/: box_fragment.glsl  box_vertex.glsl  fragment.glsl  prim_fragment.glsl  prim_vertex.glsl  vertex.glsl
src/: glad.c  main.cpp  primitives.cpp  scene.cpp
